# WebWowViewerCpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Get-EnvPath.ps1  Invoke-CmdScript.ps  Invoke-CmdScript.ps1  README.md  find_and_exec_msvc_env.bat  run-and-set-envs.ps1  tileCutter.py  visibilityBuffer.txt
android_app/app/cpp/: CMakeLists.txt
android_app/app/cpp/src/: HttpRequestProcessor.cpp  HttpRequestProcessor.h  main.cpp
emscripten_port/: CMakeLists.txt  build.sh  buildSIMD.sh  build_release.sh  build_releaseSIMD.sh  fetch-worker.js  jsLib.js  prejs.js  project.data  project.js  project.wasm  serve.js  test.html
emscripten_port/sitemock/: index.html
emscripten_port/src/: HttpRequestProcessor.cpp  HttpRequestProcessor.h  RequestProcessor.cpp  RequestProcessor.h  main.cpp
test/: CMakeLists.txt
test/src/: cameraTests.cpp  projectionTexturingTests.cpp  tests1.cpp
wowViewerLib/: CMakeLists.txt  uniformParser.js
wowViewerLib/cmakeScripts/generateGlslMapping/: CMakeLists.txt
wowViewerLib/shaders/: CMakeLists.txt
wowViewerLib/shaders/glsl/bindless/: adtShader.frag  adtShader.vert  deferred_excerpt.glsl  m2ParticleShader.vert  m2Shader.vert  m2shader_text.glsl  ribbonShader.frag  waterShader.frag  waterfallShader.vert  wmoShader.frag
wowViewerLib/shaders/glsl/common/: animation.glsl  commonADTMaterial.glsl  commonAdtIndirectDescriptorSet.glsl  commonFogFunctions.glsl  commonFunctions.glsl  commonGBufferData.glsl  commonLightFunctions.glsl  commonM2DescriptorSet.glsl  commonM2IndirectDescriptorSet.glsl  commonM2Material.glsl  commonM2WaterfallDescriptorSet.glsl  commonProjectiveConstants.glsl  commonUboSceneData.glsl  commonWMOIndirectDescriptorSet.glsl  commonWMOMaterial.glsl  commonWaterIndirect.glsl
wowViewerLib/shaders/glsl/compute/: particleEmit.comp
wowViewerLib/shaders/glsl/forwardRendering/: adtLodShader.frag  adtShader.frag  adtShader.vert  drawBBShader.vert  drawDepthShader.frag  drawFrustumShader.vert  drawLinesShader.frag  drawLinesShader.vert  drawPortalShader.frag  drawPortalShader.vert  drawQuad.vert  ffxgauss4.frag  ffxgauss4_copy.frag  ffxglow.frag  imguiShader.frag  imguiShader.vert  imguiShaderDepth.frag  m2ParticleShader.frag  m2ParticleShader.vert  m2Shader.frag  m2Shader.vert  renderFrameBufferShader.vert  ribbonShader.frag  ribbonShader.vert  skyConus.frag  skyConus.vert  waterShader.frag  waterShader.vert  waterfallShader.frag  waterfallShader.vert  wmoShader.frag  wmoShader.vert
wowViewerLib/shaders/glsl/glsl3.3/: adtLodShader.glsl  drawLinesShader.glsl  drawPoints.glsl  m2ParticleShader.glsl  readDepthBufferShader.glsl  ribbonShader.glsl
wowViewerLib/shaders/glsl/stubs/: commonGBufferData.frag  commonSceneData.frag  stub.vert
wowViewerLib/shaders/glsl/visBuffer/: adtShader.frag  adtShader.vert  m2ParticleShader.frag  m2ParticleShader_nonopaq.frag  m2ParticleShader_text.glsl  m2Shader.frag  m2Shader.vert  m2Shader_nonopaq.frag  m2shader_text.glsl  ribbonShader.frag  waterShader.frag  waterShader.vert  waterfallShader.frag  waterfallShader.vert  wmoShader.frag  wmoShader.vert
wowViewerLib/shaders/glsl/vulkan/: adtLodShader.frag  adtLodShader.vert  adtShader.frag  adtShader.vert  adtWater.frag  adtWater.vert  drawBBShader.frag  drawBBShader.vert  drawDepthShader.frag  drawFrustumShader.frag  drawLinesShader.vert  drawPoints.frag  drawPoints.vert  drawPortalShader.frag  drawPortalShader.vert  drawQuad.vert  ffxgauss4.frag  ffxglow.frag  imguiShader.frag  imguiShader.vert  m2ParticleShader.frag  m2ParticleShader.vert  m2Shader.frag  m2Shader.vert  m2Shader_pbr.frag  renderFrameBufferShader.frag  ribbonShader.frag  ribbonShader.vert  skyConus.frag  skyConus.vert  waterShader.frag  waterShader.vert  waterfallShader.frag  waterfallShader.vert  wmoShader.frag  wmoShader.vert
wowViewerLib/shaders/slang/common/: animation.slang  animationInputs.slang
wowViewerLib/shaders/slang/compute/: particleEmit.slang  particleEmitterUpdate.slang  particleMakeOlder.slang  particleUpdate.slang
wowViewerLib/shaders/src/spirv/: dumpGLSLShader.h  dumpShaderFields.h  dumpShaderMetaData.h  fileHelpers.h  spirv_refl_main.cpp  webGLSLCompiler.cpp  webGLSLCompiler.h
wowViewerLib/src/engine/: ApiContainer.cpp  ApiContainer.h  CameraMatrices.h  DrawStage.h  SceneComposer.cpp  SceneComposer.h  SceneScenario.cpp  SceneScenario.h  WowFilesCacheStorage.cpp  WowFilesCacheStorage.h  androidLogSupport.h  engineClassList.h  shaderDefinitions.h  shaderHelperFunctions.h  shaders.h  shadersStructures.h  stringTrim.h  wowCommonClasses.h  wowInnerApi.h  wowScene.cpp  wowScene.h
wowViewerLib/src/engine/algorithms/: C3Spline.cpp  C3Spline.h  (+19 more)
wowViewerLib/src/exporters/: IExporter.h
wowViewerLib/src/gapi/: GBlpTexture.cpp  GBlpTexture.h  GDevice.cpp  GDevice.h  GIndexBuffer.cpp  GIndexBuffer.h  GM2Mesh.cpp  GM2Mesh.h  GMesh.cpp  GMesh.h  GOcclusionQuery.cpp  GOcclusionQuery.h  GRenderTarget.cpp  GShaderPermutation.cpp  GShaderPermutation.h  GTexture.cpp  GTexture.h  GUniformBuffer.cpp  GUniformBuffer.h  GVertexBuffer.cpp  GVertexBuffer.h  GVertexBufferBindings.cpp  GVertexBufferBindings.h  IDeviceFactory.cpp  IDeviceFactory.h  UniformBufferStructures.h
wowViewerLib/src/glsl/: adtLodShader.glsl  adtShader.glsl  drawBBShader.glsl  drawDepthShader.glsl  drawFrustumShader.glsl  drawLinesShader.glsl  drawPoints.glsl  drawPortalShader.glsl  m2ParticleShader.glsl  m2Shader.glsl  readDepthBufferShader.glsl  renderFrameBufferShader.glsl  textureCompositionShader.glsl  wmoShader.glsl
wowViewerLib/src/include/: config.h  controllable.h  custom_container_key.h  databaseHandler.h  iostuff.h  sharedFile.h  string_utils.h  string_utlis.cpp  vulkancontext.h  wowScene.h
wowViewerLib/src/logger/: viewerLogger.h
wowViewerLib/src/persistence/: RequestProcessor.cpp  RequestProcessor.h
wowViewerLib/src/renderer/: IRenderParameters.h  IRenderer.h  MapSceneRenderer.cpp  MapSceneRenderer.h  MapSceneRendererFactory.cpp  MapSceneRendererFactory.h
wowViewerLib/src/spirv/: dumpGLSLShader.h  dumpShaderFields.h  spirv_refl_main.cpp  webGLSLCompiler.cpp  webGLSLCompiler.h
(+783 files in other folders)
